Add scheduled Meiro schema sync
